--- a/css/style.css
+++ b/css/style.css
@@ -270,8 +270,10 @@ input[type=submit]:hover {
 }
 
 /*////////////////////// RESPONSIVE //////////////////////*/
-
 @media only screen and (max-device-width:450px){
+	#tooltip{
+		display: none;
+	}
 	body{
 		width: 320px;
 	}
